--- a/Onbooks_3Ds/appsettings.Development.json
+++ b/Onbooks_3Ds/appsettings.Development.json
@@ -8,8 +8,8 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "Senai": "server = ESN509VMYSQL; database=db_onbooks_funcional;user=aluno; password=Senai1234", //essa aqui é para o senai onde o servidor é diferente para os alunos 
-    "Casa": "Server=localhost;Database=db_onbooks_funcional;User id=root;password=16092004maTh@", //esse 2 aqui é no root mesmo por que neles eu posso mexer no mysql avontade
+    "Casa": "server = ESN509VMYSQL; database=db_onbooks_funcional;user=aluno; password=Senai1234", //essa aqui é para o senai onde o servidor é diferente para os alunos 
+    "Senai": "Server=localhost;Database=db_onbooks_funcional;User id=root;password=16092004maTh@", //esse 2 aqui é no root mesmo por que neles eu posso mexer no mysql avontade
     "Notebook": "server = ESN509VMYSQL; database=db_onbooks_funcional;user=aluno; password=Senai1234"
 
   }
